--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
     <h2 class="section-title slide-in">Выбери свой Alpen Gold</h2>
     <div class="product-grid">
       <div class="product-card zoom-in">
-        <img src="https://via.placeholder.com/300x200?text=Milk+Chocolate " alt="Молочный шоколад">
+        <img src="https://avatars.mds.yandex.net/get-mpic/8382397/2a0000018de041366b0e4372b4abda25fc08/9hq" alt="Молочный шоколад">
         <h4>Молочный шоколад</h4>
         <p>Сливочная текстура и нежный вкус.</p>
       </div>
       <div class="product-card zoom-in">
-        <img src="https://via.placeholder.com/300x200?text=Dark+Chocolate " alt="Горький шоколад">
+        <img src="https://avatars.mds.yandex.net/i?id=84e889810825f29583a3eb659caa314d_l-10142109-images-thumbs&n=13" alt="Горький шоколад">
         <h4>Горький шоколад</h4>
         <p>Богатый вкус какао и антиоксиданты.</p>
       </div>
       <div class="product-card zoom-in">
-        <img src="https://via.placeholder.com/300x200?text=Nuts+%26+Caramel " alt="Орехи и карамель">
+        <img src="https://main-cdn.sbermegamarket.ru/big2/hlr-system/317/146/227/470/5/100028049775b0.jpg" alt="Орехи и карамель">
         <h4>Орехи и карамель</h4>
         <p>Хрустящие орехи и мягкая карамель.</p>
       </div>
