--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p>Богатый вкус какао и антиоксиданты.</p>
       </div>
       <div class="product-card zoom-in">
-        <img src="https://main-cdn.sbermegamarket.ru/big2/hlr-system/317/146/227/470/5/100028049775b0.jpg" alt="Орехи и карамель">
+        <img src="https://main-cdn.sbermegamarket.ru/big2/hlr-system/317/146/227/470/5/100028049775b0.jpg " width="1px" height="300px" alt="Орехи и карамель">
         <h4>Орехи и карамель</h4>
         <p>Хрустящие орехи и мягкая карамель.</p>
       </div>
