--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
     <h2 class="section-title slide-in">Выбери свой Alpen Gold</h2>
     <div class="product-grid">
       <div class="product-card zoom-in">
+        <div class="lelelele">
         <img src="https://avatars.mds.yandex.net/get-mpic/8382397/2a0000018de041366b0e4372b4abda25fc08/9hq" alt="Молочный шоколад">
         <h4>Молочный шоколад</h4>
         <p>Сливочная текстура и нежный вкус.</p>
-      </div>
       <div class="product-card zoom-in">
         <img src="https://avatars.mds.yandex.net/i?id=84e889810825f29583a3eb659caa314d_l-10142109-images-thumbs&n=13" alt="Горький шоколад">
         <h4>Горький шоколад</h4>
         <p>Богатый вкус какао и антиоксиданты.</p>
       </div>
+          </div>
       <div class="product-card zoom-in">
         <img src="https://main-cdn.sbermegamarket.ru/big2/hlr-system/317/146/227/470/5/100028049775b0.jpg " width="1px" height="300px" alt="Орехи и карамель">
         <h4>Орехи и карамель</h4>
